Fixed video vs sticky header bug on small screens

--- a/includes/css/portfolio-hilight.css
+++ b/includes/css/portfolio-hilight.css
@@ -170,7 +170,7 @@ header.main-header {
 
 .folio_image iframe {
 	width: 90%;
-	height: 640px;
+	height: 540px;
 }
 
 figcaption {
